# AutoPipeline

./: .gitignore  README.md  all_code.txt  all_py_combined.txt  all_schema_combined.txt  all_templates_combined.txt  all_templates_combined2.txt  all_templates_combined_fixed.txt  openapi.json  prototype.excalidraw  pyproject.toml
backend/: config.py  documentation.j2  example.txt  example1.json  example2.json  example3.json  example4.json  main.py  parser.py  template.j2
backend/data/: data_loader.py  preprocess.py
backend/data/audio/: data_loaders.py  preprocess.py
backend/data/image/: data_loaders.py  preprocess.py
backend/data/text/: data_loaders.py  preprocess.py
backend/models/: custom.py  pretrained.py
backend/models/audio/: custom.py  pretrained.py
backend/models/image/: custom.py  pretrained.py
backend/models/text/: custom.py  pretrained.py
backend/modules/: main.py  parser.py  server.py
backend/training/: trainer.py
backend/utils/: libs.py
core/models/: pretrained.py
core/training/: trainer.py
core/utils/: data_loaders.py
core/utils/myenv/: pyvenv.cfg
core/utils/myenv/Scripts/: activate  activate.bat
examples/: example_config.json  example_config_P.json  ui.json
frontend/auto_pipeline_web/: package-lock.json  package.json
frontend/auto_pipeline_web/src/: App.tsx
frontend/auto_pipeline_web/src/components/: Inference.tsx  Navbar.tsx  NewPipeline.tsx
main/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-main.txt  xref-main.html
modules/: aliases.py  main.py  parser.py  pyproject.toml  server.py
modules/configs/: datasetconfig.py  modelconfig.py  taskconfig.py  trainconfig.py
outputs/: config.json  out.py  out_1.py  out_10.py  out_11.py  out_12.py  out_13.py  out_14.py  out_15.py  out_24.py  out_28.py  out_29.py  out_3.py  out_30.py  out_31.py  out_32.py  out_33_raw.py  out_4.py  out_5.py  out_6.py  out_7.py  out_8.py  out_9.py  pyproject.toml
sketches/backend/data/audio/: preprocess.py
sketches/src/UI/: App.py
sketches/src/app/: data_module.py  export_module.py  inference_module.py  model_module.py  train_module.py  visualize_module.py
sketches/src/configs/: example_pipeline.yaml  model_configs.yaml
templates/: imports.j2  runner.j2  setup.j2
templates/data/loaders/image/: classification.j2
templates/data/transforms/: audio.j2  image.j2  text.j2
templates/models/: audio.j2  image.j2  layers.j2  text.j2
templates/train/: eval_loop.j2  losses.j2  metrics.j2  monitoring.j2  optimizers.j2  train_loop.j2  utils.j2
